--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;700&display=swap');
 
+@layer base {
+  html, body, #root {
+    height: 100%;
+    width: 100%;
+  }
+}
+
 @layer components {
   .title {
     position: relative;
