fixed: added font-weight to .description

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
     color: #242121;
     font-family: Roboto Condensed;
     font-size: 10px;
-
+    font-weight: normal;
     line-height: 18px;
     letter-spacing: 0.6px;
   }
