--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
     font-weight: 800;
     letter-spacing: 0.6px;
     text-align: center;
+    text-transform: uppercase;
   }
 
   .title::after {
